# vars

./: Cargo.toml
benches/: simple_bench.rs
src/: core.rs  hcons.rs  lib.rs  tuple.rs
tests/: const_generic.rs  hcons_test.rs  integration_test.rs  iterator_test.rs  tuple_iter_unsafe.rs
vars_macro/: Cargo.toml
vars_macro/src/: lib.rs
