[package]
name = "vars"
version = "0.1.0"
edition = "2021"
authors = ["harris_ta"]
description = "variadic & functional programming via tuple"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3