[package]
name = "vars"
version = "0.2.0"
edition = "2021"
authors = ["harris_ta"]
description = "variadic & functional programming via tuple"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["vars_macro"]

[dependencies]
vars_macro = { version = "0.1" }

[[bench]]
name = "simple_bench"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.5.1"
