[package]
name = "vars_macro"
version = "0.1.0"
edition = "2021"
authors = ["harris_ta"]
description = "marco helper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.27"
syn = "2.0.16"
